--- a/views/new.ejs
+++ b/views/new.ejs
@@ -11,6 +11,7 @@
             Name: <input type="text" name="name" /><br/>
             Type: <input type="text" name="type" /><br/>
             Quantity <input type= "number" name="quantity" /><br/>
+            Light or Dark <input type= "text" name="color" /><br/>
             In Stock: <input type="checkbox" name="inStock" /><br/>
             <input type="submit" name="" value="Add Item"/>
         </form>
