update for port to connect to heroku

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -6,10 +6,10 @@
     <title>Show Cabinet</title>
 </head>
 <body>
-    <h1>Cabinet show page</h1>
+    <h1>Cabinet Show page</h1>
         The <%= cabinet.name %> is a type of <%=cabinet.type %>.
         <% if(cabinet.inStock === true){ %>
-            We have that available
+            We have that in the cabinet.
         <% } else { %>
             Sorry, not available at this time
         <% } %>
