added a few partials files

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,10 @@
     <title>Cabinet-Home</title>
 </head>
 <body>
+    <nav>
+        <%- include('./partials/nav.ejs') %>
+      </nav>
     <h1>The Liquor Cabinet</h1>
+    <a href="/cabinets/new">Build Your Cabinet</a>
 </body>
-</html>
+</html>  
