--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,13 +1,7 @@
 <ul class="right">
-    <li><a href="/cabinets/new">What do you want to add? </a></li>
-    <% if (currentUser) { %>
-    <li>Welcome <%= currentUser.username %></li>
-    <li>
-      <form action="/sessions?_method=DELETE" method="POST">
-        <input type="submit" value="Log Out" class="btn-small red" />
-      </form>
-    </li>
-    
-    <% } %>
+    <li> <a href="/" >Home</a></li>
+    <li><a href="/cabinets">My Cabinet</a></li>
+    <li><a href="/cabinets/new">Wishlist</a></li>
+
 </ul>
  
