--- a/views/show.ejs
+++ b/views/show.ejs
@@ -6,6 +6,9 @@
     <title>Show Cabinet</title>
 </head>
 <body>
+    <nav>
+        <%- include('./partials/nav.ejs') %>
+      </nav>
     <h1>Cabinet Show page</h1>
         The <%= cabinet.name %> is a type of <%=cabinet.type %>.
         <% if(cabinet.inStock === true){ %>
