--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Edit Cabinet Page</h1>
+    <nav>
+        <%- include('./partials/nav.ejs') %>
+      </nav>
+    <h1>Edit Cabinet Item </h1>
     <form action="/cabinets/<%=cabinet.id%>?_method=PUT" method="POST">
           <!--  NOTE: the form is pre-populated with values for the server-->
           Name: <input type="text" name="name" value="<%=cabinet.name%>"/><br/>
