--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,7 @@
     <%- include('./partials/head.ejs') %>
 </head>
 <body>
+    <div class="container"></div>
     <nav>
         <%- include('./partials/nav.ejs') %>
       </nav>
