--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,11 +4,15 @@
     <%- include('./partials/head.ejs') %>
 </head>
 <body>
-    <div class="container"></div>
+
+    <div class="container">
+        <div class="text-center">
     <nav>
         <%- include('./partials/nav.ejs') %>
       </nav>
     <h1>The Liquor Cabinet</h1>
     <a href="/cabinets/new">Build Your Cabinet</a>
+        </div>
+    </div>
 </body>
 </html>  
