--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,17 +4,45 @@
     <%- include('./partials/head.ejs') %>
 </head>
 <body>
+    <div class="container"> 
+        <div class="text-center">
     <nav>
         <%- include('./partials/nav.ejs') %>
-      </nav>
+    </nav>
+    
+        
     <h1>Add Item to Cabinet</h1>
         <form action="/cabinets" method="POST">
-            Name: <input type="text" name="name" /><br/>
-            Type: <input type="text" name="type" /><br/>
-            Quantity <input type= "number" name="quantity" /><br/>
-            Light or Dark <input type= "text" name="color" /><br/>
-            In Stock: <input type="checkbox" name="inStock" /><br/>
-            <input type="submit" name="" value="Add Item"/>
+            <div class="form-group">
+                <label for="formGroupExampleInput"></label>
+                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Brand Name of Liquor" name="name">
+              </div>
+              <div class="form-group">
+                <label for="formGroupExampleInput2"></label>
+                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Type of Liquor (tequila, vodka, etc)" name="type">
+              </div>
+              <div class="form-group">
+                <label for="formGroupExampleInput"></label>
+                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Light or Dark" name="color">
+              </div>
+              <div class="form-group">
+                <label for="formGroupExampleInput"></label>
+                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Notes (description, where to find, pairings, etc" name="notes">
+              </div>
+              <div class="form-group">
+                <label for="formGroupExampleInput3"></label>
+                <input type="number" class="form-control" id="formGroupExampleInput3" placeholder="Enter Quantity" name="quantity">
+              </div>
+              <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1" name="inStock">
+                <label class="form-check-label" for="exampleCheck1">In Stock</label>
+              </div>
+              <button type="submit" class="btn btn-primary">Add item</button>
+
+
+            
         </form>
+     </div>
+    </div>
 </body>
 </html>
