--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,9 +3,10 @@
 <head>
     <%- include('./partials/head.ejs') %>
 </head>
-<body>
+<body style="background-image: url('https://i.imgur.com/9HknYWZ.jpg');">
 
     <div class="container">
+        
         <div class="text-center">
     <nav>
         <%- include('./partials/nav.ejs') %>
