--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,16 +3,41 @@
 <head>
     <%- include('./partials/head.ejs') %>
 </head>
-<body style="background-image: url('https://i.imgur.com/9HknYWZ.jpg');">
-
+<body >
     <div class="container">
         
         <div class="text-center">
     <nav>
         <%- include('./partials/nav.ejs') %>
       </nav>
-    <h1>The Liquor Cabinet</h1>
-    <a href="/cabinets/new">Build Your Cabinet</a>
+    <h1 class="display-1 bg-warning">The Liquor Cabinet</h1>
+    
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#staticBackdrop">
+        Click to Get Started
+      </button>
+      
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          
+          <button type="button" class="btn btn-success"><a href="/cabinets/new">Build Your Cabinet</a></button>
+        </div>
+      </div>
+    </div>
+  </div>
+
         </div>
     </div>
 </body>
