--- a/views/new.ejs
+++ b/views/new.ejs
@@ -11,7 +11,7 @@
     </nav>
     
         
-    <h1>Add Item to Cabinet</h1>
+    <h1 class="display-3 bg-warning">Add Item to Cabinet</h1>
         <form action="/cabinets" method="POST">
             <div class="form-group">
                 <label for="formGroupExampleInput"></label>
@@ -33,9 +33,9 @@
                 <label for="formGroupExampleInput3"></label>
                 <input type="number" class="form-control" id="formGroupExampleInput3" placeholder="Enter Quantity" name="quantity">
               </div>
-              <div class="form-group form-check">
+              <div class="form-group form-check bg-warning">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1" name="inStock">
-                <label class="form-check-label" for="exampleCheck1">In Stock</label>
+                <label class="form-check-label" for="exampleCheck1 bg-secondary">In Stock</label>
               </div>
               <button type="submit" class="btn btn-primary">Add item</button>
 
