--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,8 @@
-body {
-    background-color: cyan;
+body, html {
+    background-image: url("/assets/cabinet2.jpg");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
 }
