--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,13 +22,13 @@
     <div class="modal-dialog modal-lg modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+          <h5 class="modal-title" id="staticBackdropLabel">Welcome!</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          ...
+          Welcome to The Liquor Cabinet, an easy-to-use way to keep track of your personal booze inventory. Coming soon is the ability to create a wishlist and share so that you and friends can take the guessing out of what you all really want as gifts! Click below and begin adding liberally and responsibly. Cheers!
         </div>
         <div class="modal-footer">
           
