deleted about and consolidated in home page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,8 +10,11 @@
     <nav>
         <%- include('./partials/nav.ejs') %>
       </nav>
-    <h1 class="display-1 bg-warning">The Liquor Cabinet</h1>
+    <h1 class="display-2 bg-warning">The Liquor Cabinet</h1>
     
+    <h4 class="h4 text-white">
+        March 2020, to a generation of medically advanced and tech-savvy humans, shook the world in a way unimaginable. A novel coronavirus, COVID-19, gave us no choice but to pause life the way we knew it and enter into a quarantine that forced us to do what most complain about not getting the chance to do enough: STAY HOME! Well, to the creator of The Liquor Cabinet, staying home and no bars led to a robust effort to stock and keep stocked his personal booze supply. Only thing is, keeping up with the inventory in his head made for a lot of guessing when at the Package Store. The Liquor Cabinet was developed as a practical way to keep up with that inventory as well as help your friends build theirs too with the sharing of wishlists. Besides, a healthy booze supply is what responsible adults do, right? RIGHT! Thanks for checking out The Liquor Cabinet! 
+    </h4>
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#staticBackdrop">
         Click to Get Started
