initial setup of location options

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -14,7 +14,7 @@
           Brand Name: <input class="form-control" type="text" name="name" value="<%=cabinet.name%>"/><br/>
           Type of Alcohol: <input class="form-control" type="text" name="type" value="<%=cabinet.type%>"/><br/>
           Light or Dark: <input class="form-control" type="text" name="color" value="<%=cabinet.color%>"/><br/>
-          Notes: <input class="form-control" type="text" name="notes" value="<%=cabinet.notes%>"/><br/>
+          Notes: <textarea class="form-control" type="text" placeholder="Notes (description, where to find, pairings, etc)"name="notes" value="<%=cabinet.notes%>"/></textarea><br/>
           Quantity: <input class="form-control" type="number" name="quantity" value="<%=cabinet.quantity%>"/><br/>
           In Stock:
         <input type="checkbox" name="inStock"
