--- a/views/new.ejs
+++ b/views/new.ejs
@@ -27,7 +27,7 @@
               </div>
               <div class="form-group">
                 <label for="formGroupExampleInput"></label>
-                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Notes (description, where to find, pairings, etc" name="notes">
+                <textarea type="text" class="form-control" id="formGroupExampleInput" placeholder="Notes (description, where to find, pairings, etc)" name="notes"></textarea>
               </div>
               <div class="form-group">
                 <label for="formGroupExampleInput3"></label>
