--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
     <nav>
         <%- include('./partials/nav.ejs') %>
       </nav>
-    <h1 class="display-2 bg-warning">The Liquor Cabinet</h1>
+    <h1 class="display-2 bg-warning">The Liquor Cabinet</h1></br>
     
     
     <!-- Button trigger modal -->
